bazel_dep(name = "rules_rust", version = "0.67.0")
bazel_dep(name = "rules_python", version = "0.40.0")
bazel_dep(name = "flatbuffers", version = "25.2.10")

# Ingests dependencies from Cargo.toml files into Bazel repository
crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    manifests = ["//rust_nodes/pub_test:Cargo.toml", "//rust_nodes/sub_test:Cargo.toml"],
)

# Cargo.toml-collected dependencies are made available to 
# each module's BUILD.bazel files under the @crates// repository.
use_repo(crate, "crates")

# Python dependencies
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.13",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.13",
    requirements_lock = "//python_nodes/pub_test_python:requirements.txt",
)
use_repo(pip, "pip")

# Use the following boilerplate in each BUILD.bazel file:
# 
# load("@crates//:defs.bzl", "all_crate_deps", "aliases")
# 
# rust_binary(
#     name = "<package_name>",
#     srcs = ["src/main.rs"],
#     edition = "2021",
#     aliases = aliases(),
#     deps = all_crate_deps(normal = True),
# )
