[project]
name = "zenoh-ci"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "eclipse-zenoh>=1.6.2",
    "flatbuffers>=25.9.23",
    "ipykernel>=7.1.0",
    "ipympl>=0.9.8",
    "ipywidgets>=8.1.8",
    "nbformat>=5.10.4",
    "numpy>=2.3.4",
    "plotly>=6.4.0",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "zenoh-cli>=0.6.8",
]
