load("@rules_python//python:defs.bzl", "py_binary")
load("@pip//:requirements.bzl", "requirement")

py_binary(
    name = "mock_sensor",
    srcs = ["mock_sensor.py"],
    main = "mock_sensor.py",
    deps = [
        "//schemas:sensors_py",
        requirement("eclipse-zenoh"),
        requirement("flatbuffers"),
        requirement("numpy"),
    ],
)

