load("@rules_rust//rust:defs.bzl", "rust_binary")
load("@crates//:defs.bzl", "all_crate_deps", "aliases")

rust_binary(
    name = "fusion",
    srcs = ["src/main.rs"],
    edition = "2021",
    aliases = aliases(),
    deps = all_crate_deps(normal = True) + [ 
      "//schemas:sensors_rs",
    ],
)

